# flask_api_taller_5

./: .env.example  .gitignore  README.md  commands.txt  docker-compose.yml  docs.txt  pyproject.toml
app/: app.py  config.py
app/common/: dependencies.py  logging.py
app/common/cache/: redis_cache.py
app/db/mongodb/: database.py
app/db/postgresql/: database.py
app/health/application/: check_health_use_case.py
app/health/domain/: health.py
app/health/presentation/: health_controller.py
app/middleware/: http_logging.py
app/sensor/application/: evaluate_alerts_use_case.py  get_devices_use_case.py  get_history_use_case.py  get_hourly_averages_use_case.py  register_sensor_data.py
app/sensor/domain/: sensor.py
app/sensor/infrastructure/mongodb/: sensor_repository.py
app/sensor/presentation/: connection_manager.py  schemas.py  sensor_controller.py  sensor_ingest_controller.py  websocket_handler.py
frontend/: .env.example
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AlertsPanel.jsx  AveragesPanel.jsx  DashboardHeader.jsx  DeviceSelector.jsx  HistoryTable.jsx  RealtimeChart.jsx  SensorCards.jsx
frontend/src/hooks/: useSensorDashboard.js  useSensorSocket.js
frontend/src/services/: sensorApi.js
frontend/src/utils/: dateFormat.js
tests/: conftest.py
