[tool.poetry]
name = "flask-api-taller5"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.135.1"
bcrypt = "^5.0.0"
python-dotenv = "^1.2.2"
starlette = "^0.52.1"
uvicorn = "^0.42.0"
aiomysql = "^0.2.0"
pandas = "^2.2.0"
httpx = "^0.28.1"
motor = "^3.7.0"
websockets = "^14.0"
python-arango-async = "^1.0.0"
sqlalchemy = "^2.0.50"
pyjwt = "^2.13.0"
redis = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
ruff = "^0.15.16"
httpcore = "^1.0.9"
diagrams = "^0.25.1"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "RUF"]
ignore = ["E501", "S101"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report=html"
testpaths = ["tests"]
